resvg-qt/src/ffi.rs

extern "C" {
    pub fn qtc_qpainterpath_curve_to(
        c_pp: *mut qtc_qpainterpath,
        x1: f64,
        y1: f64,
        x2: f64,
        y2: f64,
        x: f64,
        y: f64,
    );
}
extern "C" {
    pub fn qtc_qpainterpath_close_path(c_pp: *mut qtc_qpainterpath);
}
extern "C" {
    pub fn qtc_qpainterpath_add_text(
        c_pp: *mut qtc_qpainterpath,
        x: f64,
        y: f64,
        c_f: *mut qtc_qfont,
        text: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn qtc_qpainterpath_set_fill_rule(c_pp: *mut qtc_qpainterpath, rule: FillRule);
}
extern "C" {
    pub fn qtc_qpainterpath_element_count(c_pp: *mut qtc_qpainterpath) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn qtc_qpainterpath_element_at(
        c_pp: *mut qtc_qpainterpath,
        i: ::std::os::raw::c_int,
    ) -> PathSegment;
}
extern "C" {
    pub fn qtc_qpainterpath_get_bbox(c_pp: *mut qtc_qpainterpath) -> qtc_rect_f;
}
extern "C" {
    pub fn qtc_qpainterpath_destroy(c_pp: *mut qtc_qpainterpath);
}
extern "C" {
    pub fn qtc_qtransform_create() -> *mut qtc_qtransform;
}
extern "C" {
    pub fn qtc_qtransform_create_from(
        a: f64,
        b: f64,
        c: f64,
        d: f64,
        e: f64,
        f: f64,
    ) -> *mut qtc_qtransform;
}
extern "C" {
    pub fn qtc_qtransform_get_data(c_ts: *mut qtc_qtransform) -> qtc_transform;
}
extern "C" {
    pub fn qtc_qtransform_destroy(c_ts: *mut qtc_qtransform);
}
extern "C" {
    pub fn qtc_qpen_create() -> *mut qtc_qpen;
}
extern "C" {
    pub fn qtc_qpen_set_color(c_pen: *mut qtc_qpen, r: u8, g: u8, b: u8, a: u8);
}
extern "C" {
    pub fn qtc_qpen_set_brush(c_pen: *mut qtc_qpen, c_brush: *mut qtc_qbrush);
}
extern "C" {
    pub fn qtc_qpen_set_line_cap(c_pen: *mut qtc_qpen, s: PenCapStyle);
}
extern "C" {
    pub fn qtc_qpen_set_line_join(c_pen: *mut qtc_qpen, s: PenJoinStyle);
}
extern "C" {
    pub fn qtc_qpen_set_width(c_pen: *mut qtc_qpen, width: f64);
}
extern "C" {
    pub fn qtc_qpen_set_miter_limit(c_pen: *mut qtc_qpen, limit: f64);
}
extern "C" {
    pub fn qtc_qpen_set_dash_offset(c_pen: *mut qtc_qpen, offset: f64);
}
extern "C" {
    pub fn qtc_qpen_set_dash_array(
        c_pen: *mut qtc_qpen,
        array: *const f64,
        len: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn qtc_qpen_destroy(c_pen: *mut qtc_qpen);
}
extern "C" {
    pub fn qtc_qbrush_create() -> *mut qtc_qbrush;
}
extern "C" {
    pub fn qtc_qbrush_set_color(c_brush: *mut qtc_qbrush, r: u8, g: u8, b: u8, a: u8);
}
extern "C" {
    pub fn qtc_qbrush_set_linear_gradient(c_brush: *mut qtc_qbrush, c_lg: *mut qtc_qlineargradient);
}
extern "C" {
    pub fn qtc_qbrush_set_radial_gradient(c_brush: *mut qtc_qbrush, c_rg: *mut qtc_qradialgradient);
}
extern "C" {
    pub fn qtc_qbrush_set_pattern(c_brush: *mut qtc_qbrush, c_img: *mut qtc_qimage);
}
extern "C" {
    pub fn qtc_qbrush_set_transform(c_brush: *mut qtc_qbrush, c_ts: *mut qtc_qtransform);
}
extern "C" {
    pub fn qtc_qbrush_destroy(c_brush: *mut qtc_qbrush);
}
extern "C" {
    pub fn qtc_qlineargradient_create(
        x1: f64,
        y1: f64,
        x2: f64,
        y2: f64,
    ) -> *mut qtc_qlineargradient;
}
extern "C" {
    pub fn qtc_qlineargradient_set_color_at(
        c_lg: *mut qtc_qlineargradient,
        offset: f64,
        r: u8,
        g: u8,
        b: u8,
        a: u8,
    );
}
extern "C" {
    pub fn qtc_qlineargradient_set_spread(c_lg: *mut qtc_qlineargradient, s: Spread);
}
extern "C" {
    pub fn qtc_qlineargradient_destroy(c_lg: *mut qtc_qlineargradient);
}
extern "C" {
    pub fn qtc_qradialgradient_create(
        cx: f64,
        cy: f64,
        fx: f64,
        fy: f64,
        r: f64,
    ) -> *mut qtc_qradialgradient;
}
extern "C" {
    pub fn qtc_qradialgradient_set_color_at(
        c_rg: *mut qtc_qradialgradient,
        offset: f64,
        r: u8,
        g: u8,
        b: u8,
        a: u8,
    );
}
extern "C" {
    pub fn qtc_qradialgradient_set_spread(c_rg: *mut qtc_qradialgradient, s: Spread);
}
extern "C" {
    pub fn qtc_qradialgradient_destroy(c_rg: *mut qtc_qradialgradient);
}
extern "C" {
    pub fn qtc_qfont_create() -> *mut qtc_qfont;
}
extern "C" {
    pub fn qtc_qfont_clone(c_f: *mut qtc_qfont) -> *mut qtc_qfont;
}
extern "C" {
    pub fn qtc_qfont_set_family(c_f: *mut qtc_qfont, family: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn qtc_qfont_set_style(c_f: *mut qtc_qfont, style: FontStyle);
}
extern "C" {
    pub fn qtc_qfont_set_small_caps(c_f: *mut qtc_qfont, flag: bool);
}
extern "C" {
    pub fn qtc_qfont_set_weight(c_f: *mut qtc_qfont, weight: FontWeight);
}
extern "C" {
    pub fn qtc_qfont_set_stretch(c_f: *mut qtc_qfont, stretch: FontStretch);
}
extern "C" {
    pub fn qtc_qfont_set_size(c_f: *mut qtc_qfont, size: f64);
}
extern "C" {
    pub fn qtc_qfont_set_letter_spacing(c_f: *mut qtc_qfont, size: f64);
}
extern "C" {
    pub fn qtc_qfont_set_word_spacing(c_f: *mut qtc_qfont, size: f64);
}
extern "C" {
    pub fn qtc_qfont_print_debug(c_f: *mut qtc_qfont);
}
extern "C" {
    pub fn qtc_qfont_destroy(c_f: *mut qtc_qfont);
}
extern "C" {
    pub fn qtc_qfontmetricsf_height(c_fm: *mut qtc_qfontmetricsf) -> f64;
}
extern "C" {
    pub fn qtc_qfontmetricsf_width(
        c_fm: *mut qtc_qfontmetricsf,
        text: *const ::std::os::raw::c_char,
    ) -> f64;
}
extern "C" {
    pub fn qtc_qfontmetricsf_full_width(
        c_fm: *mut qtc_qfontmetricsf,
        text: *const ::std::os::raw::c_char,
    ) -> f64;
}
extern "C" {
    pub fn qtc_qfontmetricsf_get_bbox(
        c_fm: *mut qtc_qfontmetricsf,
        text: *const ::std::os::raw::c_char,
    ) -> qtc_rect_f;
}
extern "C" {
    pub fn qtc_qfontmetricsf_get_ascent(c_fm: *mut qtc_qfontmetricsf) -> f64;
}
extern "C" {
    pub fn qtc_qfontmetricsf_get_underline_pos(c_fm: *mut qtc_qfontmetricsf) -> f64;
}
extern "C" {
    pub fn qtc_qfontmetricsf_get_overline_pos(c_fm: *mut qtc_qfontmetricsf) -> f64;
}
extern "C" {
    pub fn qtc_qfontmetricsf_get_strikeout_pos(c_fm: *mut qtc_qfontmetricsf) -> f64;
}
extern "C" {
    pub fn qtc_qfontmetricsf_get_line_width(c_fm: *mut qtc_qfontmetricsf) -> f64;
}
extern "C" {
    pub fn qtc_qfontmetricsf_destroy(c_fm: *mut qtc_qfontmetricsf);
}
